--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>App Landing Page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Landing Page</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Optional custom styles -->
   <style>
     .jumbotron {
-      background: linear-gradient(to right, #6a11cb, #2575fc);
+      background: linear-gradient(to right, #007bff, #00c6ff);
       color: white;
       padding: 5rem 2rem;
       text-align: center;
-      border-radius: 0.5rem;
-      margin-bottom: 2rem;
+    }
+    .card-icon {
+      font-size: 40px;
+      color: #0d6efd;
     }
   </style>
 </head>
 <body>
 
-  <!-- Header/Navbar -->
+  <!-- Header / Navbar -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
@@ -28,8 +32,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
           </ul>
         </div>
@@ -37,56 +41,76 @@
     </nav>
   </header>
 
-  <!-- Jumbotron -->
-  <section class="jumbotron">
-    <div class="container">
-      <h1 class="display-4">Welcome to MyApp</h1>
-      <p class="lead">The best app to manage your tasks, track your time, and boost productivity.</p>
-      <a href="#" class="btn btn-light btn-lg mt-3">Download Now</a>
-    </div>
-  </section>
+  <!-- Main Section -->
+  <main>
+    <!-- Jumbotron -->
+    <section class="jumbotron">
+      <div class="container">
+        <h1 class="display-4">Welcome to MyApp</h1>
+        <p class="lead">Delivering amazing features that enhance your productivity and workflow.</p>
+        <a href="#" class="btn btn-light btn-lg">Get Started</a>
+      </div>
+    </section>
 
-  <!-- Features Grid -->
-  <main class="container mb-5">
-    <div class="row text-center">
-      <article class="col-md-4 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">Fast & Lightweight</h5>
-            <p class="card-text">Built for speed and performance on all devices.</p>
+    <!-- Three-Card Grid -->
+    <section class="container my-5">
+      <div class="row text-center">
+        <div class="col-md-4">
+          <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+            <div class="card-body">
+              <div class="card-icon mb-3">🚀</div>
+              <h5 class="card-title">Fast Performance</h5>
+              <p class="card-text">Experience blazing fast speed and smooth UI transitions.</p>
+            </div>
           </div>
         </div>
-      </article>
-      <article class="col-md-4 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">Secure</h5>
-            <p class="card-text">Your data is encrypted and safe with us.</p>
+
+        <div class="col-md-4">
+          <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+            <div class="card-body">
+              <div class="card-icon mb-3">🔒</div>
+              <h5 class="card-title">Secure & Reliable</h5>
+              <p class="card-text">We prioritize your data privacy and ensure high-level protection.</p>
+            </div>
           </div>
         </div>
-      </article>
-      <article class="col-md-4 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">Customizable</h5>
-            <p class="card-text">Easily adjust the app to fit your workflow.</p>
+
+        <div class="col-md-4">
+          <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+            <div class="card-body">
+              <div class="card-icon mb-3">⚙️</div>
+              <h5 class="card-title">Customizable</h5>
+              <p class="card-text">Easily tailor features to match your specific needs and use cases.</p>
+            </div>
           </div>
         </div>
-      </article>
-    </div>
+      </div>
+    </section>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-4">
-    <section class="container">
-      <p>Contact us: info@myapp.com | +123-456-7890</p>
-      <nav>
-        <a href="#" class="text-white me-3">Privacy Policy</a>
-        <a href="#" class="text-white">Terms of Service</a>
-      </nav>
-    </section>
+  <footer class="bg-dark text-white py-4">
+    <div class="container d-flex justify-content-between flex-column flex-md-row">
+      <div>
+        <h5>MyApp</h5>
+        <p>&copy; 2025 All rights reserved.</p>
+      </div>
+      <div>
+        <h6>Contact</h6>
+        <p>Email: support@myapp.com</p>
+        <p>Phone: +1 234 567 8901</p>
+      </div>
+      <div>
+        <h6>Links</h6>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-white">Privacy Policy</a></li>
+          <li><a href="#" class="text-white">Terms of Service</a></li>
+        </ul>
+      </div>
+    </div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap JS (Bundle includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
