--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="row text-center">
         <div class="col-md-4">
           <div class="card shadow-sm mb-4">
-            <img src="https://via.placeholder.com/300x150?text=Speed" class="card-img-top" alt="Fast Performance">
+            <img src="./fast.png" class="card-img-top" alt="Fast Performance">
             <div class="card-body">
               <h5 class="card-title">Fast Performance</h5>
               <p class="card-text">Experience blazing fast speed and smooth UI transitions.</p>
@@ -72,7 +72,7 @@
 
         <div class="col-md-4">
           <div class="card shadow-sm mb-4">
-            <img src="https://via.placeholder.com/300x150?text=Security" class="card-img-top" alt="Secure">
+            <img src="./secure.png" class="card-img-top" alt="Secure">
             <div class="card-body">
               <h5 class="card-title">Secure & Reliable</h5>
               <p class="card-text">We prioritize your data privacy and ensure high-level protection.</p>
@@ -82,7 +82,7 @@
 
         <div class="col-md-4">
           <div class="card shadow-sm mb-4">
-            <img src="https://via.placeholder.com/300x150?text=Customization" class="card-img-top" alt="Customizable">
+            <img src="./customizable.png" class="card-img-top" alt="Customizable">
             <div class="card-body">
               <h5 class="card-title">Customizable</h5>
               <p class="card-text">Easily tailor features to match your specific needs and use cases.</p>
