--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
       height: 150px;
       object-fit: cover;
     }
+    .nav-stick {
+      position: fixed;
+      width: 100%;
+      top: 0;
+    }
   </style>
 </head>
 <body>
 
   <!-- Header / Navbar -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top nav-stick">
       <div class="container">
         <a class="navbar-brand" href="#">MyApp</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
